# Carapace

./: COMMAND.MD  Cargo.toml  README.MD
ddos_protection-common/: Cargo.toml
ddos_protection-common/src/: lib.rs  machine_model.rs
ddos_protection-ebpf/: Cargo.toml
ddos_protection-ebpf/src/: main.rs
src/: blacklist_manager.rs  ip_stats.rs  main.rs  ml_model.rs  rate_limiter.rs  thresholds.rs  traffic_analyzer.rs  utils.rs
src/ml/: ml_model.rs
src/resources/: ddos_protection.c
xtask/src/: build_ebpf.rs  run.rs
