[package]
name = "ddos_protection"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
anyhow = "1.0.87"
ddos_protection-common = { path = "ddos_protection-common" }

aya = { version = "0.12", features = ["async_tokio"] }
aya-log = "0.2"
aya-ebpf = "0.1.0"
aya-log-ebpf = "0.1.0"
clap = { version = "4.1", features = ["derive"] }
log = "0.4"
simplelog = "0.12"
thiserror = "1.0"
bytes = "1.0"
ndarray = "0.16.1"
rand = "0.9.0-alpha.2"
rand_chacha = "0.9.0-alpha.2"
env_logger = "0.11.5"
parking_lot = "0.12.3"


[[bin]]
name = "ddos_protection"
path = "src/main.rs"

[workspace]
members = ["ddos_protection-common", "ddos_protection-ebpf", "xtask"]

[features]
default = []